Fixed css issues with alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body{
 
 .ingredients{
     text-align:left;
+    margin-right: 49%;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -35,16 +36,13 @@ body{
     text-indent: 1%;
     font-weight:bold;
 }
+
 .steps{
     font-family:'Courier New', Courier, monospace;
     text-align: left;
+    margin-left: 51%;
 }
 .steps.header{
     text-indent: 65%;
     margin-top: -7%;
-}
-.steps.list{
-    margin-left: 0;
-    padding-left: 50%;
-    margin-top: auto;
 }
